--- a/index.css
+++ b/index.css
@@ -77,7 +77,8 @@ ul li {
     flex-grow: 1;
     font-size: 20px;
     text-align: center;
-    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2)
+    box-shadow: 0px 1px 4px rgba(0, 0, 0, 0.2);
+    transition: max-height 0.2s ease, margin-bottom 0.2s ease;
 }
 
 ul li:hover {
